<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/tittle"
            android:textSize="18sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="297dp"
            android:scaleType="fitCenter"
            android:src="@drawable/profilepic"/>

        <EditText
            android:id="@+id/nametext"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:hint="@string/name"
            android:inputType="text" />

        <EditText
            android:id="@+id/passtext"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/red"
            android:gravity="center"
            android:text="@string/button1" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/red"
            android:gravity="center"
            android:text="@string/button2" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/red"
            android:gravity="center"
            android:text="@string/button3" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/red"
            android:gravity="center"
            android:text="@string/button4" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>