<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/tittle"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/nametext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/recent_password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/passtext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/re_type_recent_passsword"
            android:inputType="textPassword" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/red"
            android:gravity="center"
            android:text="@string/button3" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>